# user-service/src/main/java/com/userservice/request/AddressCreateRequest.java
@@ -1,9 +1,0 @@
-package com.userservice.request;
-
-public record AddressCreateRequest(
-        String address,
-        String zipCode,
-        String city,
-        String state,
-        Integer countryId
-) { }
