# user-service/src/main/java/com/userservice/request/AddressUpdateRequest.java
@@ -1,10 +1,0 @@
-package com.userservice.request;
-
-public record AddressUpdateRequest(
-        String address,
-        String city,
-        String state,
-        String zipCode,
-        Integer countryId
-) {
-}
