# user-service/src/main/java/com/userservice/request/UserCreateRequest.java
@@ -1,8 +1,0 @@
-package com.userservice.request;
-
-public record UserCreateRequest(
-        String email,
-        String firstName,
-        String lastName,
-        String secretKey
-) {}
