# user-service/src/main/java/com/userservice/request/UserRegistrationRequest.java
@@ -1,7 +1,0 @@
-package com.userservice.request;
-
-public record UserRegistrationRequest(
-    UserCreateRequest user,
-    AddressCreateRequest address,
-    IndividualCreateRequest individual
-){}
