# user-service/src/main/java/com/userservice/request/UserUpdateRequest.java
@@ -1,11 +1,0 @@
-package com.userservice.request;
-
-public record UserUpdateRequest(
-        String email,
-        String firstName,
-        String lastName,
-        Boolean filled,
-        IndividualUpdateRequest individual,
-        AddressUpdateRequest address
-) {
-}
