# user-service/src/main/java/com/userservice/response/AddressDto.java
@@ -1,11 +1,0 @@
-package com.userservice.response;
-
-import java.util.UUID;
-
-public record AddressDto(
-        UUID id,
-        String address,
-        String zipCode,
-        String city,
-        String state
-) {}
