# user-service/src/main/java/com/userservice/response/IndividualDto.java
@@ -1,10 +1,0 @@
-package com.userservice.response;
-
-import java.util.UUID;
-
-public record IndividualDto(
-        UUID id,
-        String passportNumber,
-        String phoneNumber,
-        String status
-) {}
